--- a/Sprint-3/RealVagas-ReactJs/real-vagas/src/components/Footer/style.css
+++ b/Sprint-3/RealVagas-ReactJs/real-vagas/src/components/Footer/style.css
@@ -30,11 +30,11 @@
 
 #LogoInversa {
     margin-right: 1.7vw;
-    width: 11.20vw;
-    height: 11, 20vw;
+    width: 10.1vw;
+    height: 8.7vw;
 }
 
 #LogoSenai {
-    width: 11.70vw;
+    width: 10vw;
     height: 3vw;
 }
