--- a/Sprint-3/RealVagas-ReactJs/real-vagas/src/pages/Home/style.css
+++ b/Sprint-3/RealVagas-ReactJs/real-vagas/src/pages/Home/style.css
@@ -1,4 +1,102 @@
-.home .ImageHome{
-    width: 100px;
-    height: 100px;
+.Home {
+    background-color: #ffffff;
+}
+
+.footer-Home :first-child {
+    background-image: linear-gradient(to bottom, #9c0624, #c70f34);
+}
+
+.ImageHome {
+    width: 90px;
+    height: 90px;
+}
+
+.ImageLupa {
+    width: 50vw;
+    height: 40vw;
+    align-items: flex-end;
+}
+
+.Home {
+    background-image: url("../../assets/image/background1.png");
+    background-size: 113vw;
+    background-repeat: no-repeat;
+    background-position-y: 10vw;
+}
+
+.padding-margin {
+    margin-top: 10vw;
+}
+
+.titulo-home {
+    color: #ffffff;
+    margin-left: 8vw;
+    padding-bottom: 2vw;
+}
+
+.titulo-home h1 {
+    font-size: 4vw;
+}
+
+.title-Home {
+    width: 16vw;
+    font-size: 1.4vw;
+    color: #ffffff;
+    margin-left: 8vw;
+}
+
+#CadastroUsuario {
+    margin-left: 7.2vw;
+    border: 2px #ffffff solid;
+    background: transparent;
+    color: #ffffff;
+    border-radius: 29px;
+    font-size: 1.3vw;
+    width: 19vw;
+    height: 2.7vw;
+}
+
+#CadastroEmpresa {
+    margin-left: 7.2vw;
+    border: 2px #ffffff solid;
+    background: transparent;
+    color: #ffffff;
+    border-radius: 29px;
+    font-size: 1.3vw;
+    width: 19vw;
+    height: 2.7vw;
+    margin-top: 1vw;
+}
+
+.footer-HomeAlterado {
+    margin: 17vw 0 0 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-HomeAlterado hr {
+    height: 5rem;
+    border: 0.5px #ffffff solid;
+    margin-left: 4rem;
+    margin-right: 4rem;
+}
+
+.Home-texto p {
+    font-size: medium;
+    text-decoration: none;
+    color: #FFFFFF;
+    font-size: 1.1vw;
+    margin-bottom: 0;
+}
+
+#logoInversa {
+    margin-right: 1.7vw;
+    width: 10.1vw;
+    height: 8.7vw;
+}
+
+#logoSenai {
+    width: 10vw;
+    height: 3vw;
 }
